Restore deployment configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,45 @@
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
 .venv/
+venv/
+ENV/
+env/
+
+# Flask
+instance/
+*.db
+*.sqlite
+*.sqlite3
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+__MACOSX/
+
+# Logs
+*.log
 .saiku_lite.log
-instance/*.db
+
+# Uploads temporários
+uploads/
+temp/
+
+# Node modules e builds
+node_modules/
+unb-budget-dashboard/node_modules/
+unb-budget-dashboard/dist/
 portable/
+
+# Cookies e sessões
+cookies.txt
