--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT wsgi:app"
+    startCommand: "gunicorn --workers 1 --threads 8 --bind 0.0.0.0:$PORT wsgi:app"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -15,4 +15,3 @@ services:
         value: admin
       - key: SAIKU_ADMIN_PASSWORD
         value: senha123
-
